clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/envoyfilters.networking.istio.io/1.16/istio-public-gateway-proxy-protocol-1.16-ef.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: istio-public-gateway-proxy-protocol-1.16-ef
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-public-gateway
  configPatches:
  - applyTo: LISTENER
    match:
      proxy:
        proxyVersion: ^1\.16.*
    patch:
      operation: MERGE
      value:
        listener_filters:
        - name: envoy.filters.listener.proxy_protocol
        - name: envoy.filters.listener.tls_inspector
