clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/envoyfilters.networking.istio.io/1.16/istio-public-gateway-waf-1.16.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: istio-public-gateway-waf-1.16
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-public-gateway
      istio: ingressgateway
  configPatches:
    - applyTo: EXTENSION_CONFIG
      match:
        proxy:
          proxyVersion: ^1\.16.*
      patch:
        operation: ADD
        value:
          name: istio-public-gateway-waf
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            config:
              root_id: istio-public-gateway-waf-root-id
              vm_config:
                vm_id: istio-public-gateway-waf-vm-id
                runtime: envoy.wasm.runtime.v8
                code:
                  remote:
                    http_uri:
                      uri: https://github.com/zufardhiyaulhaq/community-ops/raw/master/resources/coraza.wasm
                      timeout: "60s"
              configuration:
                "@type": "type.googleapis.com/google.protobuf.StringValue"
                value: |
                  {
                    "directives_map": {
                      "rs1": [
                        "Include @demo-conf",
                        "Include @crs-setup-demo-conf",
                        "SecDefaultAction \"phase:3,log,auditlog,pass\"",
                        "SecDefaultAction \"phase:4,log,auditlog,pass\"",
                        "SecDefaultAction \"phase:5,log,auditlog,pass\"",
                        "SecDebugLogLevel 3",
                        "Include @owasp_crs/*.conf",
                        "SecRule REQUEST_URI \"@streq /admin\" \"id:101,phase:1,t:lowercase,deny\" \nSecRule REQUEST_BODY \"@rx maliciouspayload\" \"id:102,phase:2,t:lowercase,deny\" \nSecRule RESPONSE_HEADERS::status \"@rx 406\" \"id:103,phase:3,t:lowercase,deny\" \nSecRule RESPONSE_BODY \"@contains responsebodycode\" \"id:104,phase:4,t:lowercase,deny\""
                      ],
                      "rs2": [
                        "Include @crs-setup-demo-conf",
                        "SecDefaultAction \"phase:3,log,auditlog,pass\"",
                        "SecDefaultAction \"phase:4,log,auditlog,pass\"",
                        "SecDefaultAction \"phase:5,log,auditlog,pass\"",
                        "SecDebugLogLevel 3",
                        "Include @owasp_crs/*.conf",
                        "SecRule REQUEST_URI \"@streq /wp-admin\" \"id:101,phase:1,t:lowercase,deny\" \nSecRule REQUEST_BODY \"@rx maliciouspayload\" \"id:102,phase:2,t:lowercase,deny\" \nSecRule RESPONSE_HEADERS::status \"@rx 406\" \"id:103,phase:3,t:lowercase,deny\" \nSecRule RESPONSE_BODY \"@contains responsebodycode\" \"id:104,phase:4,t:lowercase,deny\""
                      ]
                    },
                    "default_directive": "rs1",
                    "per_authority_directives": {
                      "podinfo.zufardhiyaulhaq.com": "rs2",
                      "bookinfo.zufardhiyaulhaq.com": "rs2"
                    }
                  }
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.rbac
        proxy:
          proxyVersion: ^1\.16.*
      patch:
        operation: INSERT_AFTER
        value:
          name: istio-public-gateway-waf
          config_discovery:
            config_source:
              ads: {}
            type_urls:
              ["type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm"]
