clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/envoyfilters.networking.istio.io/1.16/podinfo-zufardhiyaulhaq-com-modsecurity-1.16.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: podinfo-zufardhiyaulhaq-com-modsecurity-1.16
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-public-gateway
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            sni: podinfo.zufardhiyaulhaq.com
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
        proxy:
          proxyVersion: ^1\.16.*
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.wasm
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            config:
              name: podinfo.zufardhiyaulhaq.com-modsecurity
              root_id: podinfo.zufardhiyaulhaq.com-modsecurity
              vm_config:
                runtime: "envoy.wasm.runtime.v8"
                vm_id: podinfo.zufardhiyaulhaq.com-modsecurity
                code:
                  remote:
                    http_uri:
                      uri: https://github.com/zufardhiyaulhaq/community-ops/raw/master/resources/modsecurity-filter.wasm
                      timeout: "999999s"
                configuration:
                  "@type": "type.googleapis.com/google.protobuf.StringValue"
                  value: |
                    {
                        "rules":"SecRuleEngine On\nSecRule ARGS:param1 \"test\" \"id:1,phase:1,pass,status:200,msg:'Test rule'\"\nSecRule ARGS:param1 \"attack\" \"id:2,phase:1,deny,status:400,msg:'Test rule'\""
                    }
